bubbling and capturing files updated

--- a/event-bubbling-and-capturing/index.html
+++ b/event-bubbling-and-capturing/index.html
@@ -8,12 +8,12 @@
     <title>Event Bubbling and Capturing</title>
     <style>
         div {
-            height: 200px;
-            width: 400px;
+            min-height: 200px;
+            min-width: 200px;
+            padding: 25px;
             border: 1px solid black;
         }
     </style>
-    <script src="./main.js"></script>
 </head>
 
 <body>
@@ -24,4 +24,5 @@
     </div>
 </body>
 
+<script src="./main.js"></script>
 </html>
